Add styling to App. Add content.

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .App-logo {
@@ -35,4 +37,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+main {
+  grid-column: 2;
 }
