Restyle page. Add content to PersonalProjects, TeamProjects. Add ListGroup element to Graduate, Undergrad, Secondary. Add images.

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -51,5 +51,12 @@ main div {
 .img-responsive {
   height: auto;
   width: 300px;
+  border: 2px solid black;
   border-radius: 10px;
+  margin: 10px;
+}
+
+#affinity {
+  height: auto;
+  width: 1000px;
 }
