Add images to TeamProjects. Restyle.

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -45,6 +45,7 @@ form input {
 main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  text-align: center;
 }
 
 main div {
@@ -63,12 +64,12 @@ h3, p {
   margin: 10px;
 }
 
-#affinity {
+/* #affinity {
   height: auto;
   width: 1000px;
-}
+} */
 
 .carousel, #map {
   height: auto;
-  width: 800px;
+  width: 700px;
 }
