--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -45,15 +45,24 @@ form input {
 main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  text-align: center;
+  /* text-align: center; */
 }
 
 main div {
   grid-column: 2;
 }
 
+footer p {
+  margin: 10px;
+}
+
 h3, p {
   color: black;
+  margin: 10px;
+}
+
+ul li {
+  text-align: left;
 }
 
 .img-responsive {
